--- a/src/components/ContentModal/ContentModal.css
+++ b/src/components/ContentModal/ContentModal.css
@@ -12,6 +12,7 @@
 }
 
 .tagline {
+  padding-top: 25px;
   padding-bottom: 10px;
   align-self: center;
 }
@@ -46,6 +47,7 @@
   font-size: 5vw;
   display: flex;
   align-items: center;
+  padding-top: 20px;
   justify-content: center;
 }
 
