--- a/src/Pages/Home/MovieDetail.css
+++ b/src/Pages/Home/MovieDetail.css
@@ -1,64 +1,52 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
-.modal {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .paper {
   width: 100%;
-  height: 80%;
   background-color: "#1f1f1f";
   border: "1px solid #282c34";
-  border-radius: 10px;
   color: "white";
   background-color: #1f1f1f;
 }
 
 .contentModal {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  margin-top: 4rem;
+  grid-template-columns: 30% 70%;
   padding: 4rem;
-  width: 80%;
-  align-items: center;
-  justify-content: center;
 }
 
 .ContentModal-portrait {
-  display: none;
   object-fit: contain;
   border-radius: 10px;
+  display: block;
 }
 
 .ContentModal-landscape {
-  object-fit: contain;
-  border-radius: 10px;
+  display: none;
 }
 
-.ContentModal__about {
-  padding: 10px;
+.ContentModal-about {
   display: flex;
   text-align: center;
   flex-direction: column;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
+  margin-left: 10rem;
+  padding: 0 4rem;
 }
 
 .taglines {
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   align-self: center;
 }
 
 .ContentModal-description {
-  display: flex;
-  height: 40%;
-  overflow-y: scroll;
+  margin: 1rem;
   padding: 15px;
   border-radius: 20px;
-  scrollbar-width: thin; /* Firefox */
+  scrollbar-width: thin;
   box-shadow: inset 0 0 5px #000000;
-  text-align: justify;
+  text-align: left;
 }
 
 .carouselItem {
@@ -67,19 +55,22 @@
   object-fit: contain;
   padding: 10px;
 }
-.carouselItem__img {
+.carouselItem-img {
   border-radius: 10px;
   margin-bottom: 5px;
   box-shadow: 0px 0px 5px black;
 }
 
-.movie-title {
-  margin-bottom: 20px;
-  color: #fff;
+.ContentModal-title {
+  height: 12%;
+  font-size: 2.5vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .movie-poster {
-  margin: 4rem 2rem;
+  margin: 4rem;
   border-radius: 10px;
 }
 
@@ -94,38 +85,44 @@
   height: 450px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   .contentModal {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 0;
-    width: 100%;
+  }
+  .ContentModal-landscape {
+    display: flex;
+    object-fit: contain;
+    border-radius: 10px;
+  }
+  .ContentModal-portrait {
+    display: none;
+  }
+
+  .ContentModal-about {
+    margin-left: 0;
+    padding: 0 0rem;
+  }
+
+  .ContentModal-title {
+    font-size: 22px;
   }
 }
 
-@media (min-width: 835px) {
-  .ContentModal-landscape {
-    display: none;
-  }
-  .ContentModal-portrait {
-    display: flex;
-    width: 38%;
-  }
-  .ContentModal {
+@media (max-width: 768px) {
+  /* .ContentModal {
     flex-direction: row;
     justify-content: space-around;
     padding: 10px 0;
-  }
-  .ContentModal__about {
+  } */
+  /* .ContentModal__about {
     width: 58%;
     padding: 0;
     height: 100%;
-  }
-  .ContentModal__title {
+  } */
+  .ContentModal-title {
     font-size: 3.5vw;
-  }
-  .ContentModal__description {
-    font-size: 22px;
   }
 }
