--- a/src/Pages/Home/MovieDetail.css
+++ b/src/Pages/Home/MovieDetail.css
@@ -8,7 +8,7 @@
   background-color: #1f1f1f;
 }
 
-.contentModal {
+.content-Modal {
   display: grid;
   margin-top: 4rem;
   grid-template-columns: 30% 70%;
@@ -63,7 +63,7 @@
 
 .ContentModal-title {
   height: 12%;
-  font-size: 2.5vw;
+  font-size: 5vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -85,8 +85,8 @@
   height: 450px;
 }
 
-@media (max-width: 600px) {
-  .contentModal {
+@media (max-width: 867px) {
+  .content-Modal {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -107,22 +107,6 @@
   }
 
   .ContentModal-title {
-    font-size: 22px;
-  }
-}
-
-@media (max-width: 768px) {
-  /* .ContentModal {
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 10px 0;
-  } */
-  /* .ContentModal__about {
-    width: 58%;
-    padding: 0;
-    height: 100%;
-  } */
-  .ContentModal-title {
-    font-size: 3.5vw;
+    font-size: 3vw;
   }
 }
